<resources>
    <string name="app_name">Central UFMT</string>

    <!-- Sign in -->
    <string name="text_siga_account">Entre com sua conta do Siga UFMT</string>
    <string name="log_in_message">@string/app_name</string>
    <string name="rga_log_in_hint">Matrícula (RGA)</string>
    <string name="pass_log_in_hint">Senha do Siga</string>
    <string name="action_log_in">Entrar</string>
    <string name="action_log_out">Sair</string>
    <string name="action_anonymous_log_in">Entrar mais tarde</string>
    <string name="welcome_greetings">Olá %s!</string>
    <string name="not_logged_in">Não Logado</string>

    <!-- Main Activity -->
    <string name="title_activity_main">@string/app_name</string>
    <string name="menu_update_student">Forçar atualização dos dados</string>
    <string name="action_share_app">Compartilhar</string>
    <string name="action_settings">Configurações</string>
    <string name="toast_offline_main">Modo Offline</string>

    <!-- Map Fragment -->
    <string name="title_fragment_map">Mapa</string>
    <string name="title_route_map">rota do Ligeirinho</string>
    <string name="title_poi_map">pontos de interesse</string>
    <string name="menu_show_route">Mostrar rota do Ligeirinho</string>
    <string name="menu_show_poi">Mostrar pontos de interesse</string>
    <string name="toast_bus_error_map">Erro ao sobrepor a rota do Ligeirinho.</string>
    <string name="toast_poi_error_map">Erro ao sobrepor os pontos de interesse.</string>

    <!-- Moodle Fragment -->
    <string name="title_fragment_moodle">AVA</string>
    <string name="menu_refresh_moodle">Atualizar Página</string>
    <string name="toast_download_moodle">Baixando arquivo…</string>
    <string name="snack_retry_login_moodle">Relogar</string>

    <!-- Schedule Fragment -->
    <string name="title_fragment_schedule">Horários</string>
    <string name="menu_refresh_schedule">Atualizar</string>
    <string name="snack_error_schedule">Falha ao carregar o horário.</string>
    <string name="snack_reload_schedule">Recarregar</string>
    <string name="snack_empty_schedule">O horário está vazio.</string>
    <string name="snack_dismiss_schedule">@android:string/ok</string>

    <!-- MenuRu Fragment -->
    <string name="text_main_course_menuru">"\u2022 Prato Principal: "</string>
    <string name="text_garnish_menuru">"\u2022 Guarnição: "</string>
    <string name="text_vegetarian_menuru">"\u2022 Vegetariano: "</string>
    <string name="text_salad_menuru">"\u2022  Salada: "</string>
    <string name="text_acompaniment_menuru">"\u2022 Acompanhamento: "</string>
    <string name="text_dessert_menuru">"\u2022 Sobremesa: "</string>
    <string name="menu_reload_menuru">Recarregar cardápio</string>
    <string name="snack_success_menuru">Cardápio atualizado!</string>
    <string name="snack_error_menuru">Falha ao carregar o cardápio.</string>

    <!-- Student Fragment -->
    <string name="title_fragment_student">Aluno</string>

    <!-- Curriculum Fragment -->
    <string name="title_fragment_curriculum">Grade do Curso</string>

    <!-- Dialogs -->
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancelar</string>
    <string name="dialog_error_title">Desculpe</string>
    <string name="authentication_message">Você foi desconectado, por favor entre novamente!</string>

    <!-- Error messages -->
    <string name="error_field_required">Campo Obrigatório</string>
    <string name="error_canceled_log_in">Autenticação cancelada.</string>
    <string name="error_invalid_rga">Número de Matrícula inválido</string>
    <string name="error_invalid_password">Senha inválida</string>
    <string name="error_access_denied">Acesso Negado. Por favor confira os dados informados.</string>
    <string name="error_generic_log_in">Não foi possível entrar no momento. Por favor tente novamente mais tarde.</string>
    <string name="error_message_play_services">Desculpe, você precisa de um dispositivo que suporte o Google Play Services para utilizar este app.</string>

    <!-- Accessibility -->
    <string name="ufmt_logo_description">Logomarca da UFMT</string>
    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>
    <string name="title_fragment_menuru">Cardápio</string>

    <!-- Uncategorized-->
    <string name="strings.xml_placeholder"/>
    <string name="snack_success_schedule">Horário atualizado!</string>
    <string name="title_activity_settings">Configurações</string>

</resources>
