<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.cleytongoncalves.centralufmt.ui.login.LogInActivity">

    <!-- Top Background -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/signinbg"/>

    <!-- Header Text -->
    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:minWidth="200dp"
        android:padding="20dp"
        android:text="@string/log_in_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/text_icons"
        android:textStyle="normal|bold"
        tools:ignore="UnusedAttribute"/>

    <!-- Center Logo -->
    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="205dp"
        android:contentDescription="@string/ufmt_logo_description"

        android:src="@drawable/ufmt_logo_large_2"/>

    <!-- LogIn Form -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sample_text_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/rga_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/rga_log_in_hint"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="12"
                android:maxLines="1"
                android:minHeight="25dp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleDrawable="@drawable/ic_visibility">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pass_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/pass_log_in_hint"
                android:imeActionId="@+id/action_login"
                android:imeActionLabel="@string/action_log_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="25dp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                />
        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/button_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minWidth="200dp"
                android:padding="20dp"
                android:text="@string/action_log_in"
                android:textSize="@dimen/text_large_body"
                android:theme="@style/BlueButtonStyle"/>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:theme="@style/ProgressWhite"
                android:visibility="gone"
                tools:visibility="visible"/>
        </FrameLayout>

        <TextView
            android:id="@+id/button_anonymous_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:text="@string/action_anonymous_log_in"
            android:textAppearance="@android:style/TextAppearance.Widget.Button"/>
    </LinearLayout>

</RelativeLayout>